<resources>
    <string name="app_name">Choose Browser</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <!--======== START ========-->
    <!--====================================================== -->

    <!--    Global-->
    <string name="AppBranding">Choose Browser</string>
    <string name="AppBrandingWrap">Choose\nBrowser</string>

    <!--    Permission Screen-->
    <string name="perm_lvl">Permissions</string>
    <string name="perm1">Set as Default Browser</string>
    <string name="perm1_sub">Shows list of <b>Browser pop-up</b>.</string>
    <string name="perm2">Overlay Permission</string>
    <string name="perm2_sub">Allows <b>Browser pop-up</b>.</string>
    <string name="nextBt">Next</string>
    <!--    <string name="perm_lvl"><b>Permissions</b></string>-->


    <!--================-->
    <!--    Settings Screen-->
    <string name="theme">Theme</string>
    <string name="ThemeSub">Enable dark mode to<b> minimize eye strain </b> in low-light environments.</string>
    <string name="color_themes">Color Themes</string>
    <string name="color_themes_sub">Choose an app color style. Each style supports light and dark mode.</string>
    <string name="color_theme_default">Default</string>
    <string name="color_theme_eclipse">Eclipse</string>
    <string name="color_theme_neuronight">NeuroNight</string>
    <string name="color_theme_neural_blue">Neural Blue</string>
    <string name="color_theme_cosmic">Cosmic</string>
    <string name="color_theme_obsidian_pulse">Obsidian Pulse</string>
    <string name="color_theme_dracula">Dracula</string>
    <string name="color_theme_copilot">Copilot</string>
    <string name="color_theme_theme4">Theme 4</string>
    <string name="SystemDef">System Default.</string>
    <string name="LtTheme">Light Theme</string>
    <string name="dkTheme">Dark Theme</string>

    <string name="exclude_browser">Exclude a browser</string>
    <string name="exclude_browser_sub">Hide selected browsers from the popup list.</string>
    <string name="exclude_browser_screen_title">Exclude Browsers</string>
    <string name="exclude_browser_screen_sub">Turn off browsers you do not want in the popup.</string>


    <string name="help">Help</string>
    <string name="test_pop">Test Pop-Up</string>
    <string name="test_pop_sub">Try this safe Test Link and check if popup happens.</string>

    <string name="feedback">Tell Us What You Think</string>
    <string name="feedback_sub">Quick feedback, big impact</string>

    <string name="about">About Us</string>
    <string name="about_sub">Building simple solutions for everyday needs.</string>


    <!--    Pop-Up Screen-->
    <string name="open_wt">Open With</string>
    <string name="copyBt">Copy</string>
    <string name="shareBt">Share</string>
    <string name="link">Full Link</string>

    <string name="demoLink" formatted="false">"https://www.bing.com/images/search?view=detailV2ccid=Uv2TE8asid=935E869F612FBA7F2C5C9D492F6F74C3A7BED3DDthid=OIP.Uv2TE8asQ9y5YaRmdGYuBwAAAAmediaurl=https%3a%2f%2fsuperstarsbio.com%2fwp-content%2fuploads%2f2018%2f09%2f915j5CL39bL._SL1000_.jpg</string>
    <string name="preview">Preview Page</string>
    <string name="showLink">Show Link</string>
    <string name="select_link">Select a link</string>
    <string name="select_link_sub">Multiple links found in shared text</string>
    <string name="cancel">Cancel</string>

    <!--    Temporary -->
    <string name="Perm1Btn">Make default browser</string>
    <string name="Perm2Btn">Give Overlay permission</string>


    <!--Long Hold Shortcuts-->
    <string name="shortcut_browserShortLabel">Browser List</string>
    <string name="shortcut_browserLongLabel">Open Browser List</string>
    <string name="shortcut_browserDisabledLabel">Shortcut unavailable</string>

<!--    DEMO-->
    <string name="iconLabel">Duck duck go</string>

<!-- ==== ABOUT ==== -->
    <string name="madeBy">Made by Subham Kumar Sathua</string>
    <string name="about_appTag">Instantly View All Installed Browsers When You Click a Link — <b>Choose Your Preferred Browser</b> in Seconds!</string>
    <string name="about_contactEmail">hyper.devstudio@protonmail.com 📧</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="open_source_licenses_sub">View licenses for libraries and fonts used</string>
    <string name="licenses_not_found">Unable to load licenses.\nPlease try again later.</string>


    <style name="Theme.Transparent" parent="Theme.Material3.DayNight.NoActionBar">
        <item name="android:windowIsTranslucent">true</item>
        <item name="android:windowBackground">@android:color/transparent</item>
        <item name="android:windowNoTitle">true</item>
        <item name="android:backgroundDimEnabled">true</item>
        <item name="android:statusBarColor">@android:color/transparent</item>
        <item name="android:navigationBarColor">@android:color/transparent</item>
        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
    </style>


</resources>