<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/HelpLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="2dp"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/demoButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="#00FFFFFF"
        android:layout_marginBottom="2dp"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp"
        android:layout_marginTop="4dp"
        tools:backgroundTint="#F8C3C3"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            tools:context=".MainActivity"
            tools:layout_height="wrap_content"
            tools:layout_width="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/demoIcon"
                    android:layout_width="22dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ix_open_in_new"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/demoText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/text"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/test_pop"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="24dp"
                    android:layout_height="24dp" />

                <TextView
                    android:id="@+id/sub_demoText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/test_pop_sub"
                    android:textColor="@color/textSubSecondary"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <!-- ========== ABOUT =============== -->

    <androidx.cardview.widget.CardView
        android:id="@+id/aboutButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp"
        android:backgroundTint="#00FFFFFF"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="4dp"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        tools:backgroundTint="#F8C3C3"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            tools:context=".MainActivity"
            tools:layout_height="wrap_content"
            tools:layout_width="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/aboutIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ix_info"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/aboutText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/text"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/about"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="24dp"
                    android:layout_height="24dp" />

                <TextView
                    android:id="@+id/sub_aboutText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/about_sub"
                    android:textColor="@color/textSubSecondary"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <!-- ============= Feedback ================-->

    <androidx.cardview.widget.CardView
        android:id="@+id/feedbackButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp"
        android:backgroundTint="#00FFFFFF"
        android:paddingTop="8dp"
        android:layout_marginTop="4dp"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        tools:backgroundTint="#F8C3C3"

        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="1dp"
            tools:context=".MainActivity"
            tools:layout_height="wrap_content"
            tools:layout_width="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/feedbIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ix_feedback"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/feedbText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/text"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/feedback"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="24dp"
                    android:layout_height="24dp" />

                <TextView
                    android:id="@+id/sub_feedbText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/feedback_sub"
                    android:textColor="@color/textSubSecondary"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <!-- ============= Privacy Policy ================-->

    <androidx.cardview.widget.CardView
        android:id="@+id/privacyPolicyButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp"
        android:backgroundTint="#00FFFFFF"
        android:paddingTop="8dp"
        android:layout_marginTop="4dp"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        tools:backgroundTint="#F8C3C3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ix_privacy"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/text"
                    android:fontFamily="@font/poppins_regular"
                    android:text="Privacy Policy"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="24dp"
                    android:layout_height="24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="How we handle your data."
                    android:textColor="@color/textSubSecondary"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>